# BL-Exotica-AD

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
configs/data/: gbt_fine.yaml  gbt_high_time.yaml  gbt_moderate.yaml  synthetic.yaml  synthetic_fine.yaml
configs/model/: convae.yaml  convae_mae.yaml  convae_vae.yaml  memae.yaml  udma.yaml  udma_bottleneck_loose.yaml  udma_bottleneck_tight.yaml  udma_cnn_teacher.yaml  udma_mem30.yaml  udma_old_teacher.yaml  vit_dae.yaml  vit_mae.yaml  vit_mae_ssim.yaml
configs/search/: default.yaml
configs/training/: bvae_gbt_fine.yaml  dae_gbt_fine.yaml  default.yaml  memae_gbt_fine.yaml  smoke_test.yaml  srt_real.yaml  udma_gbt_fine.yaml  udma_gbt_fine_bottleneck_loose.yaml  udma_gbt_fine_bottleneck_tight.yaml  udma_gbt_fine_cnn_teacher.yaml  udma_gbt_fine_control_bs256.yaml  udma_gbt_fine_mem30.yaml  udma_gbt_fine_old_teacher_fixed_preproc.yaml
docs/: 01_scoring-history.md  02_udma-architecture.md  03_teacher-localization.md  04_candidate-filtering.md  05_results.md  README.md
notebooks/: 03_npy_cache_viewer.ipynb  04_exotica_0000_real_data.ipynb  05_exotica_0000_distributions.ipynb
scripts/: build_cadence_manifest.py  build_gbt_cadence_manifest.py  distill_teacher.py  fit_udma_teacher_norm.py  inference.py  inject_recover.py  pipeline_sensitivity.py  preprocess_cache.py  preview_broadband.py  preview_signals.py  recompute_anomaly_maps.py  scan_headers.py  train.py
tests/: test_models.py  test_morphologies.py  test_preprocessing_modes.py  test_synthetic_signals.py  test_vetting.py
(+82 files in other folders)
